# chess.social

./: README.md
backend/: CMakeLists.txt  main.cpp
frontend/: angular.json  package-lock.json  package.json
frontend/src/app/: app.component.css  app.component.html
frontend/src/app/chessboard/: chessboard.component.css  chessboard.component.html  chessboard.component.ts
frontend/src/app/home/: home.component.html
